<resources>
    <string name="app_name">安卓小管家</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yubao">天气预报</string>
    <string name="kongqizhiliang">空气质量</string>
    <string name="pm2_5">可入肺颗粒物</string>
    <string name="pm10">可吸入颗粒物</string>
    <string name="o3">臭氧</string>
    <string name="co">一氧化氮</string>
    <string name="no2">二氧化氮</string>
    <string name="so2">二氧化硫</string>
    <string name="chuxingjianyi">出行建议</string>
    <string name="shoujihao">手机号</string>
    <string name="验证码">请输入验证码</string>
    <string name="发送验证码">发送验证码</string>
    <string name="昵称">昵称</string>
    <string name="密码">密码</string>
    <string name="立即注册">立即注册</string>
    <string name="注册">注册</string>
    <string name="登陆">登录</string>
    <string name="安卓小管家">安卓小管家</string>
    <string name="注册账号">注册账号</string>
    <string name="验证码登陆">验证码登录</string>
    <string name="splashLoginBtnText">立即登陆</string>
    <string name="loginTitle">你的贴心小管家</string>
    <string name="loginEditPassword">密码</string>
    <string name="confirmPassword">确认密码</string>
    <string name="loginEditAccount">账号</string>
    <string name="loginEditUsername">昵称</string>
    <string name="register">注册</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="login">登录</string>
    <string name="weather">天气</string>
    <string name="plusicon">+</string>
    <string name="note">便签管理</string>
    <string name="money">收支管理</string>
    <string name="event">事件提醒</string>
    <string name="text">text</string>
    <string name="pic">pic</string>
    <string name="title">小管家</string>
    <string name="title_activity_money_add">MoneyAddActivity</string>
    <string name="添加提醒">添加提醒</string>
    <string name="添加便签">添加便签</string>
    <string name="记一笔">记一笔</string>
    <string name="事件提醒">事件提醒</string>
    <string name="便签管理">便签管理</string>
    <string name="收支管理">收支管理</string>
    <string name="天气预报">天气预报</string>
    <string name="账号">账号</string>
    <string name="backup">上传服务器</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="元">元</string>
    <string name="备注">备注</string>
    <string name="保存修改">保存修改</string>
    <string name="选择支出类型">选择支出类型</string>
    <string name="消费">消费</string>
    <string name="今日累计">今日累计</string>
    <string name="本月累计">本月累计</string>
    <string name="查看月度报告">查看月度报告</string>
    <string name="minus">-</string>
    <string name="支出分布">支出分布</string>
    <string name="标题">标题</string>
    <string name="提醒时间">提醒时间</string>
    <string name="提前">提前</string>
    <string name="日">日</string>
    <string name="退出登录">退出登录</string>
    <string name="历史记录">历史记录</string>
</resources>
