<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/login_bg" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#0000">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/注册"
                android:textColor="#FFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/back_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_back" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="45dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edit_text"
                android:hint="@string/昵称"
                android:padding="7dp"
                android:textColor="#fff"
                android:textColorHint="#ccc"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_edit_text"
                android:hint="@string/密码"
                android:inputType="textPassword"
                android:padding="7dp"
                android:textColor="#fff"
                android:textColorHint="#ccc"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_edit_text"
                android:hint="@string/shoujihao"
                android:padding="7dp"
                android:textColor="#fff"
                android:textColorHint="#ccc"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/check_code_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <EditText
                    android:id="@+id/check_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:background="@drawable/shape_edit_text"
                    android:hint="@string/验证码"
                    android:padding="7dp"
                    android:textColor="#fff"
                    android:textColorHint="#ccc"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/get_check_code"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_btn_primary"
                    android:text="@string/发送验证码" />
            </LinearLayout>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_btn_primary"
                android:text="@string/立即注册"
                android:textSize="20sp" />


        </LinearLayout>

    </FrameLayout>

</layout>
