<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <android.support.v7.widget.CardView
                android:id="@+id/notice_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="4dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    >


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="2"
                            >

                            <TextView
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:text="@string/标题"
                                android:textColor="#000" />

                            <EditText
                                android:id="@+id/title"
                                android:layout_width="0dp"
                                android:layout_height="40dp"
                                android:layout_weight="1"
                                android:background="#fff"
                                android:textSize="12sp"
                                android:gravity="center_vertical"
                                />

                        </LinearLayout>



                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="#aaa" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <LinearLayout
                            android:id="@+id/notice_time_layout"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="2"

                            >

                            <TextView
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:text="@string/提醒时间"
                                android:textColor="#000"
                                android:layout_marginEnd="10dp"
                                />

                            <TextView
                                android:id="@+id/notice_time"
                                android:layout_width="0dp"
                                android:layout_height="40dp"
                                android:layout_weight="1"
                                android:background="#fff"
                                android:textSize="12sp"
                                android:gravity="center_vertical"
                                />

                            <ImageView
                                android:layout_width="12dp"
                                android:layout_height="12dp"
                                android:layout_gravity="center_vertical|end"
                                android:src="@mipmap/fill_down" />

                        </LinearLayout>


                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="#aaa" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <LinearLayout
                            android:id="@+id/notice_shift_layout"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="2"

                            >

                            <TextView
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:text="@string/提前"
                                android:textColor="#000"
                                android:layout_marginEnd="10dp"
                                />

                            <TextView
                                android:id="@+id/shift_time"
                                android:layout_width="0dp"
                                android:layout_height="40dp"
                                android:layout_weight="1"
                                android:background="#fff"
                                android:textSize="12sp"
                                android:gravity="center_vertical"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/日"
                                android:textColor="#000"
                                />

                        </LinearLayout>


                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="#aaa" />

                    <EditText
                        android:id="@+id/remark"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:hint="@string/备注"
                        android:textSize="12sp"
                        android:gravity="start"
                        android:padding="10dp"
                        android:background="#fff"
                        />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/notice_info"
                android:background="@drawable/shape_btn_primary"
                android:layout_margin="15dp"
                android:text="@string/保存修改"
                android:textColor="#fff"
                />

        </RelativeLayout>


    </android.support.design.widget.CoordinatorLayout>


</layout>